syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

import "google/protobuf/wrappers.proto";
import "GrpcEvitaDataTypes.proto";
import "GrpcQueryParam.proto";
import "GrpcEntityMutation.proto";
import "GrpcEntitySchemaMutation.proto";

// Record for the criteria of the capture request allowing to limit mutations to specific area of interest an its
// properties.
message GrpcTrafficRecordingCaptureCriteria {
  // content determines whether only basic information about the traffic recording is returned or the actual content
  GrpcTrafficRecordingContent content = 1;
  // since specifies the time from which the traffic recording should be returned
  GrpcOffsetDateTime since = 2;
  // sinceSessionSequenceId specifies the session sequence ID from which the traffic recording should be returned
  google.protobuf.Int64Value sinceSessionSequenceId = 3;
  // sinceRecordSessionOffset specifies the record session offset from which the traffic recording should be returned
  //                          (the offset is relative to the session sequence ID and starts from 0), offset allows
  //                          to continue fetching the traffic recording from the last fetched record when session
  //                          was not fully fetched
  google.protobuf.Int32Value sinceRecordSessionOffset = 4;
  // type specifies the types of traffic recording to be returned
  repeated GrpcTrafficRecordingType type = 5;
  // sessionId specifies the session ID from which the traffic recording should be returned
  GrpcUuid sessionId = 6;
  // longerThan specifies the minimum duration in milliseconds of the traffic recording to be returned
  google.protobuf.Int32Value longerThanMilliseconds = 7;
  // fetchingMoreBytesThan specifies the minimum number of bytes that record should have fetched from the disk
  google.protobuf.Int32Value fetchingMoreBytesThan = 8;
  // labels specifies the client labels that the traffic recording must have (both name and value must match)
  repeated GrpcQueryLabel labels = 9;
}

// Record represents a CDC event that is sent to the subscriber if it matches to the request he made.
message GrpcTrafficRecord {
  // The session id which the recording belongs to.
  GrpcUuid sessionId = 1;
  // The order (sequence) of the traffic recording in the session. First record in the session has sequence ID 0 and
  // represents the session start, additional records are numbered sequentially.
  int32 recordSessionOffset = 2;
  // The type of the recording.
  GrpcTrafficRecordingType type = 3;
  // The time when the recording was created.
  GrpcOffsetDateTime created = 4;
  // The duration of the operation in milliseconds.
  int32 durationInMilliseconds = 5;
  // The size of the data fetched from the permanent storage in bytes.
  int32 ioFetchedSizeBytes = 6;
  // The number of objects fetched from the permanent storage.
  int32 ioFetchCount = 7;
  // optional body of the traffic recording when it is requested by the GrpcTrafficCaptureContent
  oneof body {
    GrpcTrafficMutationContainer mutation = 8;
    GrpcTrafficQueryContainer query = 9;
    GrpcTrafficEntityEnrichmentContainer enrichment = 10;
    GrpcTrafficEntityFetchContainer fetch = 11;
    GrpcTrafficSessionCloseContainer sessionClose = 12;
    GrpcTrafficSessionStartContainer sessionStart = 13;
    GrpcTrafficSourceQueryContainer sourceQuery = 14;
    GrpcTrafficSourceQueryStatisticsContainer sourceQueryStatistics = 15;
  }
}

// This container holds a mutation and its metadata.
message GrpcTrafficMutationContainer {
  // The sequence order of the session (analogous to sessionId, but monotonic sequence based on location in the log).
  int64 sessionSequenceOrder = 1;
  // The session id which the query belongs to.
  GrpcUuid sessionId = 2;
  // The relative order (offset) of the traffic recording within the session.
  int32 recordSessionOffset = 3;
  // The time when the mutation was issued.
  GrpcOffsetDateTime created = 4;
  // The duration of the mutation application in milliseconds.
  int64 durationInMilliseconds = 5;
  // The mutation operation.
  oneof mutation {
    // The entity mutation operation.
    GrpcEntityMutation entityMutation = 6;
    // The schema mutation operation.
    GrpcEntitySchemaMutation schemaMutation = 7;
  }
}

// Container for a query and its metadata.
message GrpcTrafficQueryContainer {
  // The sequence order of the session (analogous to sessionId, but monotonic sequence based on location in the log).
  int64 sessionSequenceOrder = 1;
  // The session id which the query belongs to.
  GrpcUuid sessionId = 2;
  // The relative order (offset) of the traffic recording within the session.
  int32 recordSessionOffset = 3;
  // The query operation.
  string query = 4;
  // The client labels associated with the query.
  repeated GrpcQueryLabel labels = 5;
  // The time when the query was created.
  GrpcOffsetDateTime created = 6;
  // The duration of the query in milliseconds.
  int64 durationInMilliseconds = 7;
  // The total number of records calculated by the query.
  int32 totalRecordCount = 8;
  // The total number of disk fetch attempts made by the query.
  int32 ioFetchCount = 9;
  // The total number of Bytes fetched from the disk by the query.
  int32 ioFetchedSizeBytes = 10;
  // The primary keys of the records returned by the query (in returned data chunk). I.e. number of records actually
  // returned by the pagination requirement of the query.
  repeated int32 primaryKeys = 11;
}

// This container holds information about single entity enrichment.
message GrpcTrafficEntityEnrichmentContainer {
  // The sequence order of the session (analogous to sessionId, but monotonic sequence based on location in the log).
  int64 sessionSequenceOrder = 1;
  // The session id which the enrichment order belongs to.
  GrpcUuid sessionId = 2;
  // The relative order (offset) of the traffic recording within the session.
  int32 recordSessionOffset = 3;
  // The query operation associated with enrichment.
  string query = 4;
  // The time when the enrichment order was issued.
  GrpcOffsetDateTime created = 5;
  // The duration of the enrichment in milliseconds.
  int64 durationInMilliseconds = 6;
  // The total number of disk fetch attempts made by the enrichment.
  int32 ioFetchCount = 7;
  // The total number of Bytes fetched from the disk by the enrichment.
  int32 ioFetchedSizeBytes = 8;
  // The primary key of the enriched record
  int32 primaryKey = 9;
}

// This container holds information about single entity fetch.
message GrpcTrafficEntityFetchContainer {
  // The sequence order of the session (analogous to sessionId, but monotonic sequence based on location in the log).
  int64 sessionSequenceOrder = 1;
  // The session id which the entity fetch order belongs to.
  GrpcUuid sessionId = 2;
  // The relative order (offset) of the traffic recording within the session.
  int32 recordSessionOffset = 3;
  // The query operation associated with entity fetch.
  string query = 4;
  // The time when the fetch order was issued.
  GrpcOffsetDateTime created = 5;
  // The duration of the entity fetch in milliseconds.
  int64 durationInMilliseconds = 6;
  // The total number of disk fetch attempts made by the entity fetch.
  int32 ioFetchCount = 7;
  // The total number of Bytes fetched from the disk by the entity fetch.
  int32 ioFetchedSizeBytes = 8;
  // The primary key of the fetched record
  int32 primaryKey = 9;
}

// This container holds information about the session start.
message GrpcTrafficSessionStartContainer {
  // The sequence order of the session (analogous to sessionId, but monotonic sequence based on location in the log).
  int64 sessionSequenceOrder = 1;
  // The associated session id.
  GrpcUuid sessionId = 2;
  // The relative order (offset) of the traffic recording within the session.
  int32 recordSessionOffset = 3;
  // The version of the catalog that will be used for the entire session.
  int64 catalogVersion = 4;
  // The time when the session was created.
  GrpcOffsetDateTime created = 5;
}

// This container holds information about the session close.
message GrpcTrafficSessionCloseContainer {
  // The sequence order of the session (analogous to sessionId, but monotonic sequence based on location in the log).
  int64 sessionSequenceOrder = 1;
  // The associated session id.
  GrpcUuid sessionId = 2;
  // The relative order (offset) of the traffic recording within the session.
  int32 recordSessionOffset = 3;
  // The version of the catalog
  int64 catalogVersion = 4;
  // The time when the session was closed (the traffic record created).
  GrpcOffsetDateTime created = 5;
  // The duration of the session in milliseconds.
  int64 durationInMilliseconds = 6;
  // The total number of disk fetch attempts made in this session.
  int32 ioFetchCount = 7;
  // The total number of Bytes fetched from the disk in this session.
  int32 ioFetchedSizeBytes = 8;
  // The overall number of traffic records recorded for this session.
  int32 trafficRecordCount = 9;
  // The number of records missed out in this session due to memory shortage (not sampling, sampling affects entire sessions).
  int32 trafficRecordsMissedOut = 10;
  // The overall number of queries executed in this session.
  int32 queryCount = 11;
  // The overall number of entities fetched in this session (excluding the entities fetched by queries).
  int32 entityFetchCount = 12;
  // The overall number of mutations executed in this session.
  int32 mutationCount = 13;
}

// This container holds information about the source query.
message GrpcTrafficSourceQueryContainer {
  // The sequence order of the session (analogous to sessionId, but monotonic sequence based on location in the log).
  int64 sessionSequenceOrder = 1;
  // The associated session id.
  GrpcUuid sessionId = 2;
  // The relative order (offset) of the traffic recording within the session.
  int32 recordSessionOffset = 3;
  // The unique identifier of the source query
  GrpcUuid sourceQueryId = 4;
  // The time when the source query was initiated.
  GrpcOffsetDateTime created = 5;
  // unparsed, raw source query in particular format
  string sourceQuery = 6;
  // type of the query (e.g. GraphQL, REST, etc.)
  string queryType = 7;
}

// This container holds information about the source query statistics.
message GrpcTrafficSourceQueryStatisticsContainer {
  // The sequence order of the session (analogous to sessionId, but monotonic sequence based on location in the log).
  int64 sessionSequenceOrder = 1;
  // The associated session id.
  GrpcUuid sessionId = 2;
  // The relative order (offset) of the traffic recording within the session.
  int32 recordSessionOffset = 3;
  // The source query id
  GrpcUuid sourceQueryId = 4;
  // The time when the source query was finished.
  GrpcOffsetDateTime created = 5;
  // The duration of the source query in milliseconds.
  int64 durationInMilliseconds = 6;
  // The total number of disk fetch attempts made by this query.
  int32 ioFetchCount = 7;
  // The total number of Bytes fetched from the disk by this query.
  int32 ioFetchedSizeBytes = 8;
  // The total number of records returned by the query ({@link EvitaResponse#getRecordData()} size)
  int32 returnedRecordCount = 9;
  // The total number of records calculated by the query ({@link EvitaResponse#getTotalRecordCount()})
  int32 totalRecordCount = 10;
}

// Client label attached to the query
message GrpcQueryLabel {
  // The label name
  string name = 1;
  // The label value
  string value = 2;
}

// Enum to specify the depth of details sent in the traffic recording event.
enum GrpcTrafficRecordingContent {
  // Only the header of the event is sent.
  TRAFFIC_RECORDING_HEADER = 0;
  // Entire traffic recording content is sent.
  TRAFFIC_RECORDING_BODY = 1;
}

// List of all possible traffic recording types.
enum GrpcTrafficRecordingType {
  // evitaDB session opened.
  TRAFFIC_RECORDING_SESSION_START = 0;
  //* evitaDB session closed.
  TRAFFIC_RECORDING_SESSION_FINISH = 1;
  // Query received via. API from the client - container contains original string of the client query.
  // API might call multiple queries related to the same source query.
  TRAFFIC_RECORDING_SOURCE_QUERY = 2;
  // Query received via. API from the client is finalized and sent to the client. Container contains the final
  // statistics aggregated over all operations related to the source query.
  TRAFFIC_RECORDING_SOURCE_QUERY_STATISTICS = 3;
  // Internal evitaDB query (evitaQL) was executed.
  TRAFFIC_RECORDING_QUERY = 4;
  // Internal call to retrieve single evitaDB entity. Record is not created for entities fetched as a part of
  // a query.
  TRAFFIC_RECORDING_FETCH = 5;
  // Internal call to enrich contents of the evitaDB entity.
  TRAFFIC_RECORDING_ENRICHMENT = 6;
  // Internal call to mutate the evitaDB entity or catalog schema.
  TRAFFIC_RECORDING_MUTATION = 7;
}
